implemented READ functionality for shoe

--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -21,7 +21,7 @@
 
     <div class="nav">
     <% if logged_in? %>
-    <a href="/">All Shoes</a>
+    <a href="/shoes">All Shoes</a>
     <a href="/">Add a Shoe</a>
     <a href="/logout">Log Out</a>
     <%end%>
