--- a/app/views/shoes/index.erb
+++ b/app/views/shoes/index.erb
@@ -4,5 +4,5 @@
     <img src"<%= shoe.image_url %>" alt="<%= shoe.title %>" height="200" width ="200">
     <strong>Created At: <%= shoe.created_at %></strong>
     <p><%= shoe.description %></p>
-    <p>By: <%= shoe.user.name %></p>
+    <p>By: <%= shoe.user.name.capitalize %></p>
     <% end %>
