--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -1,10 +1,10 @@
-<h1>Please Login!</h1>
+<h1>Please log in</h1>
 <form class="" action="/login" method="post">
-<label for="email">Email:</label>
-<input type="text" name="email" id="email" value="">
-<label for="password">Password:</label>
-<input type="password" name="password" id="password" value="" >
-<input type="submit" value="Log In!">
+  <label for="email">Email:</label>
+  <input type="text" name="email" id="email" value="">
+  <label for="passowrd">Password:</label>
+  <input type="password" name="password" id="password" value="">
+  <input type="submit" name="" value="Log In!">
 </form>
 
 <a href="/">Back</a>
