--- a/app/views/users/signup.erb
+++ b/app/views/users/signup.erb
@@ -1,17 +1,17 @@
 <h2>Sign Up!</h2>
 
 <form class="" action="/users" method="post">
-<label for="name">Name: </label>
-<input type="text" name="name" value="">
-<label for="email">Email: </label>
-<input type="text" name="name" value="">
-<label for="password">Password: </label>
-<input type="password" name="name" value="">
-<label for="bio">Bio: </label>
-<input type="text" name="bio" value="">
-<label for="image_url">Profile Picture: </label>
-<input type="text" name="image_url" value="">
-<input type="submit" value="Sign Up!">
+  <label for="name">Name: </label>
+  <input type="text" name="name" value="">
+  <label for="email">Email: </label>
+  <input type="text" name="email" value="">
+  <label for="password">Password: </label>
+  <input type="password" name="password" value="">
+  <label for="password">Bio: </label>
+  <input type="text" name="bio" value="">
+  <label for="password">Image URL: </label>
+  <input type="text" name="image_url" value="">
+  <input type="submit" name="" value="Create User">
 </form>
 
 <a href="/">Back</a>
