updated welcome message and error message view

--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -20,15 +20,16 @@
     <div class="wrapper">
 
     <% if flash[:error] %>
-    <h3><%= flash[:error] %></h3
+    <h3 style="color:red;"><h3><%= flash[:error] %></h3
     <% end %>
 
     <% if flash[:message] %>
-   <h3 style="color:red;"><%= flash[:message] %></h3>
+   <h3 style="color:green;"><%= flash[:message] %></h3>
     <% end %>
 
     <div class="nav">
     <h3 style="color:green;"><% if logged_in? %>
+    <a href="/">My Profile</a>
     <a href="/shoes">All Shoes</a>
     <a href="/shoes/new">Add a Shoe</a>
     <a href="/logout">Log Out</a>
